# ParallelProcessing

./: CMakeLists.txt
Project1/: wordCounter.cpp  wordCounter2.cpp
Project2/: HashMap.cpp  HashMap.h  HashNode.h  Utils.cpp  Utils.h  WordCount.h  austin_repeated.txt  openMP  openMP.cpp  output.txt
Project3/: Utils.cpp  Utils.h  input.txt  openMPI.cpp  output.txt  pattern.txt
